[ui] Hide the ink highlight on the download bar when showing a context menu.

BUG=615013
TEST=manual

Review-Url: https://codereview.chromium.org/2913643002
Cr-Commit-Position: refs/heads/master@{#475590}

Former-commit-id: 5dc1f110c5a1fc9fab3e79a83206000bf0aa61e0